--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.0.2",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^8.8.1",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.4",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-multi-carousel": "^2.6.3",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.4",
+    "react-typical": "^0.1.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
